Split TypeHelper.natvis into separate files Extented support for a few formats

--- a/src/Layers/xrRenderPC_GL/xrRender_GL.vcxproj.filters
+++ b/src/Layers/xrRenderPC_GL/xrRender_GL.vcxproj.filters
@@ -1126,9 +1126,9 @@
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
-    <Natvis Include="..\..\TypeHelper.natvis" />
+    <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
-    <None Include="packages.config" />
+    <Natvis Include="..\xrRender\xrRender.natvis" />
   </ItemGroup>
 </Project>
