--- a/src/Layers/xrRenderPC_R2/xrRender_R2.vcxproj.filters
+++ b/src/Layers/xrRenderPC_R2/xrRender_R2.vcxproj.filters
@@ -1111,9 +1111,9 @@
     <Text Include="todo.txt" />
   </ItemGroup>
   <ItemGroup>
-    <Natvis Include="..\..\TypeHelper.natvis" />
+    <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
-    <None Include="packages.config" />
+    <Natvis Include="..\xrRender\xrRender.natvis" />
   </ItemGroup>
 </Project>
